# happy_coding

./: .gitignore  Cargo.toml  README.md  claude_settings.json  git-ui-redesign-plan.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/happy-adapters/: Cargo.toml
crates/happy-adapters/src/: antigravity.rs  claude.rs  codex.rs  lib.rs
crates/happy-cli/: Cargo.toml  final_verify.sh  simple_verify.sh  test_attach.py
crates/happy-cli/src/: main.rs
crates/happy-cli/src/api/: mod.rs
crates/happy-cli/src/commands/: auth.rs  build.rs  config.rs  connect.rs  daemon.rs  dev.rs  doctor.rs  env.rs  init.rs  install.rs  local_config.rs  mod.rs  notify.rs  profile.rs  run.rs  run_remote.rs  validate.rs
crates/happy-cli/src/config/: mod.rs
crates/happy-cli/src/daemon/: bridge.rs  error.rs  metrics.rs  mod.rs  multiplexer.rs  persistence.rs  rpc.rs  rpc_server.rs  server.rs  session_manager.rs
crates/happy-core/: Cargo.toml
crates/happy-core/src/: adapter.rs  builder.rs  config.rs  error.rs  lib.rs  types.rs  utils.rs  watcher.rs
crates/happy-remote-core/: Cargo.toml
crates/happy-remote-core/src/: error.rs  lib.rs
crates/happy-remote-core/src/crypto/: mod.rs  nacl.rs
crates/happy-remote-core/src/ports/: encryption.rs  mod.rs  storage.rs  terminal.rs
crates/happy-remote-core/src/types/: artifact.rs  encryption.rs  machine.rs  message.rs  mod.rs  session.rs
crates/happy-server/: Cargo.toml
crates/happy-server/migrations/: 001_initial.sql
crates/happy-server/src/: main.rs
crates/happy-server/src/extractors/: auth.rs  mod.rs
crates/happy-server/src/handlers/: auth.rs  health.rs  machines.rs  mod.rs  sessions.rs  users.rs  ws.rs
crates/happy-server/src/services/: auth.rs  machine_registry.rs  mod.rs  session_manager.rs
crates/happy-server/src/storage/: db.rs  memory.rs  mod.rs
crates/happy-types/: Cargo.toml
crates/happy-types/src/: lib.rs  message.rs  session.rs  user.rs
crates/happy-web/: Cargo.toml
crates/happy-web/pkg/: happy-web.js  happy-web_bg.wasm  style.css
crates/happy-web/src/: main.rs
crates/happy-web/src/components/: log_viewer.rs  mod.rs  protected_route.rs  session_list.rs  terminal.rs  xterm.rs
crates/happy-web/src/pages/: dashboard.rs  login.rs  mod.rs  settings.rs  terminal.rs
crates/happy-web/src/utils/: logger.rs
docs/: RESEARCH_SUMMARY.md  antigravity_research_report.md  claude_code_research_report.md  google_idx_research_report.md  openai_codex_research_report.md  remote_architecture.md  unified_devkit_architecture.md
my_skills/: AGENTS.md  happy.config.yaml
my_skills/.agent/skills/code-analyst/: SKILL.md
my_skills/.agent/skills/link-debugger/: SKILL.md
my_skills/.agent/skills/mcp-builder/: SKILL.md
my_skills/.agent/skills/project-architect/: SKILL.md
my_skills/.agent/skills/skill-creator/: SKILL.md
my_skills/.agent/skills/task-orchestrator/: SKILL.md
my_skills/.agent/skills/tdd-workflow/: SKILL.md
my_skills/.claude/skills/code-analyst/: SKILL.md
my_skills/.claude/skills/lessons-learner/: SKILL.md
my_skills/.claude/skills/project-architect/: SKILL.md
my_skills/.claude/skills/security-review/: SKILL.md
my_skills/.claude/skills/tdd-workflow/: SKILL.md
my_skills/.claude/skills/verification-loop/: SKILL.md
my_skills/.codex/: config.toml
my_skills/.codex/skills/agent-framework/: SKILL.md
my_skills/.codex/skills/code-analyst/: SKILL.md
my_skills/.codex/skills/lessons-learner/: SKILL.md
my_skills/.codex/skills/link-debugger/: SKILL.md
my_skills/.codex/skills/mcp-builder/: SKILL.md
my_skills/.codex/skills/secure-execution/: SKILL.md
my_skills/.codex/skills/security-review/: SKILL.md
my_skills/.codex/skills/skill-creator/: SKILL.md
my_skills/.codex/skills/task-orchestrator/: SKILL.md
my_skills/.codex/skills/verification-loop/: SKILL.md
my_skills/skills/agent-framework/: SKILL.md
my_skills/skills/code-analyst/: SKILL.md
my_skills/skills/hello-world/: SKILL.md
my_skills/skills/lessons-learner/: SKILL.md
my_skills/skills/link-debugger/: SKILL.md
my_skills/skills/mcp-builder/: SKILL.md
my_skills/skills/project-architect/: SKILL.md
my_skills/skills/secure-execution/: SKILL.md
my_skills/skills/security-review/: SKILL.md
my_skills/skills/skill-creator/: SKILL.md
my_skills/skills/task-orchestrator/: SKILL.md
my_skills/skills/tdd-workflow/: SKILL.md
my_skills/skills/verification-loop/: SKILL.md
scripts/: deploy.sh  install_local.sh  self_deploy.sh  upgrade_local.sh
