[workspace]
resolver = "2"
members = [
    "crates/happy-core",
    "crates/happy-adapters",
    "crates/happy-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AI Code DevKit Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Terminal
colored = "2"
indicatif = "0.17"

# Paths
dirs = "5"
pathdiff = "0.2"

# Utilities
regex = "1"
chrono = "0.4"
