[workspace]
resolver = "2"
members = [
    "crates/happy-core",
    "crates/happy-adapters",
    "crates/happy-cli",
    "crates/happy-types",
    "crates/happy-remote-core",
    "crates/happy-server",
    "crates/happy-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AI Code DevKit Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
rmp-serde = "1.1"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Terminal & PTY
portable-pty = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# Encryption & Security
sodiumoxide = "0.2"
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.7", features = ["v4", "v7", "serde"] }

# Web (Remote)
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database (Remote)
sqlx = { version = "0.7", features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "chrono",
    "uuid",
] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"

# Metrics (Remote)
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = "0.21"
tracing-opentelemetry = "0.22"

# Notifications (Remote)
web-push = "0.10"


# System info
whoami = "1.4"

# Paths
dirs = "5"
pathdiff = "0.2"

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
once_cell = "1.19"
config = "0.14"

# Testing
tokio-test = "0.4"
