[package]
name = "happy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and utilities for Happy Coding toolkit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }

# Crypto (optional)
sodiumoxide = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[features]
default = []
crypto = ["sodiumoxide", "jsonwebtoken", "argon2", "rand"]
