[package]
name = "happy-remote-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["crypto"]
crypto = ["sodiumoxide"]

[dependencies]
# Pure types
happy-types = { path = "../happy-types", version = "0.1.0" }

# Async (full features for native code)
tokio = { workspace = true, features = ["full", "process", "signal"] }
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rmp-serde.workspace = true

# Encryption
sodiumoxide = { workspace = true, optional = true }

# Time
chrono.workspace = true

# IDs
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true
regex.workspace = true
crypto_box = "0.9.1"
xsalsa20poly1305 = "0.9.1"

[dev-dependencies]
tokio-test.workspace = true
